Add 'Total rows' label to total results entry.

--- a/src/main/resources/templates/voters.html
+++ b/src/main/resources/templates/voters.html
@@ -26,7 +26,7 @@
       </tr>
     </tbody>
   </table>
-  <h4 th:text="${voterRegistrations.totalRows}"></h4>
+  <h4 th:text="'Total rows: ' + ${voterRegistrations.totalRows}"></h4>
 </body>
 
 </html>
